update everything for 2024

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,17 @@
 version: '3'
 services:
     web:
-        image: manheok/flask-users-test
+        # image: manheok/flask-users-test
         build: .
         ports:
-            - "5000:5000"
-        volumes:
-            - ./flask_users:/code
+            - "5001:5001"
+        # volumes:
+        #     - ./flask_users:/code
         depends_on:
             - mongodb
             - redis
     mongodb:
-        image: mongo:3.4.19-jessie
+        image: mongo
         environment:
             - MONGO_DATA_DIR=/data/db
         volumes:
@@ -22,9 +22,13 @@ services:
         build: .
         environment:
             - CELERY_BROKER_URL=redis://redis:6379/0
-        command: ['celery', '-A', 'flask_users.tasks', 'worker', '-l', 'debug']
+        entrypoint: ["celery"]
+        command: ['-A', 'flask_users.tasks', 'worker', '-l', 'debug']
         depends_on:
             - redis
             - mongodb
     redis:
         image: redis
+        ports:
+            - 6379:6379
+
