--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,3 +17,7 @@ redis = "6.2.0"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.group.test.dependencies]
+pytest = "^6.0.0"
+httmock = "^1.4.0"
